# matop

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: matrix.py
src/matop/: __init__.py  functions.py  matrix.py  row.py  utils.py
src/matrixops/: __init__.py  exceptions.py  matrix.py  row.py
tests/: test_matrix.py  test_row.py
