[project]
name = "matrixops"
version = "1.0.0"
description = "A package for creating matrices and doing basic operations on them."
authors = [
  {name = "Muhammad Altaaf", email = "taafuuu@gmail.com"},
]
readme = "README.md"
keywords = ["matrix"]

classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Users",
  "Private :: Do Not Upload"
]


[project.urls]
Homepage = "https://github.com/taaaf11/matop"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/taaaf11/matop.git"
Issues = "https://github.com/taaaf11/matop/issues"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
